# spark-ai-cli

./: .gitignore  README.md  pyproject.toml
spark_ai_cli/: cli.py  pyspark_ai_utils.py
