[tool.poetry]
name = "spark-ai-cli"
version = "0.1.0"
description = "SparkAI on CLI"
authors = ["Lucas Miranda <lucas-m@outlook.com>"]
readme = "README.md"
packages = [{include = "spark_ai_cli"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
