[tool.poetry]
name = "spark-ai-cli"
version = "0.1.0"
description = "SparkAI on CLI"
authors = ["Lucas Miranda <lucas-m@outlook.com>"]
readme = "README.md"
packages = [{include = "spark_ai_cli"}]

[tool.poetry.dependencies]
python = "^3.10"
pyspark-ai = "^0.1.8"
pyspark = "^3.4.1"
pyarrow = "^12.0.1"
plotly = "^5.15.0"
typer = "^0.9.0"

[tool.poetry.scripts]
pyspark-ai = "spark_ai_cli.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
